--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -52,8 +52,8 @@
 
 
 <table width="90%" datasetId="{{ dataset.id }}">
-    {% if dataset.doi|default %} %}
-        {% if dataset.doi.status == constant('Pelagos\\Entity\\DOI::STATUS_PUBLIC') %} %}
+    {% if dataset.doi|default %}
+        {% if dataset.doi.status == constant('Pelagos\\Entity\\DOI::STATUS_PUBLIC') %}
             <tr><td colspan="2"><b>DOI:</b><br/> {{dataset.doi.doi}}</td></tr>
             <tr><td colspan="2">&nbsp;</td></tr>
         {% endif %}
