--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-created.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-created.email.twig
@@ -3,7 +3,7 @@
 {% block body_html %}
     Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},<br>
     The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has received your dataset submission <a href="{{ url('pelagos_app_ui_datasetsubmission_default') }}?regid={{datasetSubmission.dataset.udi}}">{{datasetSubmission.dataset.udi}}</a>.<br>
-    This dataset has been assigned the doi: {{datasetSubmission.dataset.doi.doi}}.<br>
+    This dataset has been assigned the doi: {{datasetSubmission.dataset.doi}}.<br>
     If you have any questions regarding this dataset submission please email griidc@gomri.org.<br>
     <br>
     Thank you,<br>
@@ -15,7 +15,7 @@ Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},
 
 The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has received your dataset submission {{ url('pelagos_app_ui_datasetsubmission_default') }}?regid={{datasetSubmission.dataset.udi}}
 
-This dataset has been assigned the doi: {{datasetSubmission.dataset.doi.doi}}.
+This dataset has been assigned the doi: {{datasetSubmission.dataset.doi}}.
 
 If you have any questions regarding this dataset submission please email griidc@gomri.org.
 
