--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
@@ -34,7 +34,7 @@
             </p>
 
             {% if dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_RESTRICTED_REMOTELY_HOSTED') %}
-                <p style="color:#A00">This dataset has been marked as restricted for author use only.<br>To obtain access to this dataset, please click the location link above and follow any instructions provided.</p>
+                <p style="color:#A00">This dataset is restricted for download but is hosted by another website so availability status is not guaranteed to be accurate.<br>To obtain access to this dataset, please click the location link above and follow any instructions provided.</p>
             {% else %}
                 <p>To download this dataset, please use the location link above. Note, this dataset is not hosted at GRIIDC; the site is not under GRIIDC control and GRIIDC is not responsible for the information or links you may find there.</p>
             {% endif %}
