some new stuff for the report

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -14,6 +14,7 @@
                     <li><a href="{{ path("pelagos_app_list_researchgroups") }}">Research Groups</a></li>
                     <li><a href="{{ path("pelagos_app_list_people") }}">People</a></li>
                     <li><a href="{{ path("pelagos_app_ui_publicationdatasetlink_list") }}">Dataset - Publication Links</a></li>
+                    <li><a href="{{ path("pelagos_app_list_researchgroups") }}">Research Group - Dataset and DIF</a></li>
                 </ul>
             </li>
             <li>
@@ -26,6 +27,12 @@
                     <li><a href="{{ path("pelagos_app_ui_persondatarepository_default") }}">Person to Data Repository Association</a></li>
                     <li><a href="{{ path("pelagos_app_ui_personfundingorganization_default") }}">Person to Funding Organization Association</a></li>
                     <li><a href="{{ path("pelagos_app_ui_publicationdatasetlink_default") }}">Dataset - Publication Link</a></li>
+                </ul>
+            </li>
+            <li>
+                Reports:
+                <ul>
+                    <li><a href="{{ path("pelagos_app_ui_reportresearchgroupdatasetdif_default") }}">Report Research Group - Dataset and DIF</a></li>
                 </ul>
             </li>
         </ul>
