Added entry to admin page.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -28,6 +28,12 @@
                     <li><a href="{{ path("pelagos_app_ui_publicationdatasetlink_default") }}">Dataset - Publication Link</a></li>
                 </ul>
             </li>
+            <li>
+                Reports:
+                <ul>
+                    <li><a href="{{ path("pelagos_app_ui_gomrireport_default") }}">GOMRI Dataset Report</a></li>
+                </ul>
+            </li>
         </ul>
     {% else %}
         <div class="messages error">
