fixed ...html.twig file by adding extends and block statments.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportResearchGroupDatasetDif.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportResearchGroupDatasetDif.html.twig
@@ -1,3 +1,7 @@
+{% extends "PelagosAppBundle:template:UI.html.twig" %}
+
+{% block head %}
 {{ form_start(form) }}
     {{ form_widget(form) }}
-{{ form_end(form) }}
+ {{ form_end(form) }}
+{% endblock %}
