--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportResearchGroupDatasetStatus.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportResearchGroupDatasetStatus.html.twig
@@ -1,6 +1,6 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
 
-{% block head %}
+{% block body %}
 {{ form_start(form) }}
     {{ form_widget(form) }}
  {{ form_end(form) }}
