--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -32,6 +32,7 @@
                 Reports:
                 <ul>
                     <li><a href="{{ path("pelagos_app_ui_gomrireport_default") }}">GOMRI Dataset Report</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_downloadreport_default") }}">Download Report</a></li>
                 </ul>
             </li>
         </ul>
