--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportDatasetDownload.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportDatasetDownload.html.twig
@@ -1,5 +1,13 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
 
+{% block head %}
+    {{ parent() }}
+
+    {% javascripts '@PelagosAppBundle/Resources/public/js/downloadReport.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+{% endblock %}
+
 {% block body %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
