Added title to the Report page, changed the name on the admin menu page and changed the name of the csv file that is downloaded

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -33,7 +33,7 @@
                 <ul>
                     <li><a href="{{ path("pelagos_app_ui_reportresearchgroupdatasetstatus_default") }}">Report Research Group Dataset Status</a></li>
                     <li><a href="{{ path("pelagos_app_ui_gomrireport_default") }}">GOMRI Dataset Report</a></li>
-                    <li><a href="{{ path("pelagos_app_ui_downloadreport_default") }}">Download Report</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_downloadreport_default") }}">Dataset Download Report</a></li>
                 </ul>
             </li>
         </ul>
