--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportDatasetDownload.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/ReportDatasetDownload.html.twig
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block body %}
+    <h2> Dataset Download Report</h2>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
