--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
@@ -1,6 +1,66 @@
 {% extends "PelagosAppBundle::layout.html.twig" %}
 
+
+{% block head %}
+    {{ add_library (
+    [
+    'ui.dialog'
+    ]
+    ) }}
+
+    {% stylesheets
+        '@PelagosAppBundle/Resources/public/css/entity.css'
+        '//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css'
+        '//cdn.datatables.net/select/1.0.1/css/select.dataTables.min.css' %}
+        {{ add_css(asset_url) }}
+    {% endstylesheets %}
+
+    {% javascripts
+        '@PelagosAppBundle/Resources/public/js/common.js'
+        '//cdn.datatables.net/1.10.7/js/jquery.dataTables.js'
+        '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js'
+        '@PelagosAppBundle/Resources/public/js/entityList.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+
+{% endblock %}
+
+{% set properties = [
+    'id',
+    'udi',
+    'datasetSubmission.restrictions',
+    'datasetSubmission.id'
+]
+%}
+
 {% block body %}
     {#TODO Create datatable and use API call to get data, in order to populate it.#}
-    <h2> Dataset Restrictions - Modifier</h2>
+    <h2> Dataset Restrictions - Modifier </h2>
+    <table
+        class="entityTable stripe"
+        width="100%"
+        data-ajax = '{
+            "url": "{{ path('pelagos_api_datasets_get_collection', {'_properties': properties | join(',')}) }}",
+            "dataSrc": "",
+            "cache": false
+        }'
+        data-columns = '[
+            {"data": "id"},
+            {"data": "udi"},
+            {"data": "datasetSubmission.restrictions"},
+            {"data": "datasetSubmission.id"},
+        ]'
+        data-order = '[
+            [ 2, "asc"]
+        ]'
+    >
+        <thead>
+        <tr>
+            <th>Dataset Id</th>
+            <th>UDI</th>
+            <th>Dataset Restriction</th>
+            <th>Dataset Submission Id</th>
+        </tr>
+        </thead>
+    </table>
 {% endblock %}
