--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
@@ -29,30 +29,40 @@
     'id',
     'udi',
     'datasetSubmission.restrictions',
-    'datasetSubmission.id'
+    'datasetSubmission.id',
 ]
 %}
 
 {% block body %}
     {#TODO Create datatable and use API call to get data, in order to populate it.#}
-    <h2> Dataset Restrictions - Modifier </h2>
+    <h2> Dataset Restrictions - Modifier</h2>
     <table
-        class="entityTable stripe"
-        width="100%"
-        data-ajax = '{
-            "url": "{{ path('pelagos_api_datasets_get_collection', {'_properties': properties | join(',')}) }}",
-            "dataSrc": "",
-            "cache": false
-        }'
-        data-columns = '[
-            {"data": "id"},
-            {"data": "udi"},
-            {"data": "datasetSubmission.restrictions"},
-            {"data": "datasetSubmission.id"},
-        ]'
-        data-order = '[
-            [ 2, "asc"]
-        ]'
+            entityNiceName = "Dataset Restrictions"
+            viewInterface = "{{ path('pelagos_app_ui_datasetrestrictions_default') }}"
+            entityApi = "{{ path('pelagos_api_datasets_get_collection') }}"
+            class="entityTable stripe"
+            width="100%"
+            data-ajax = '{
+                "url": "{{ path('pelagos_api_datasets_get_collection', {"datasetSubmission=*&_properties": properties | join(',')}) }}",
+                "dataSrc": "",
+                "cache": true
+            }'
+            data-columns = '[
+                {"data": "id"},
+                {"data": "udi"},
+                {"data": "datasetSubmission.restrictions"},
+                {"data": "datasetSubmission.id"}
+            ]'
+            data-order = '[
+                [ 2, "asc"]
+            ]'
+            data-column-definitions = '[
+            {
+                "targets": [ 0 ],
+                "visible": false,
+                "searchable": false
+            },
+            ]'
     >
         <thead>
         <tr>
