--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -34,6 +34,7 @@
                     <li><a href="{{ path("pelagos_app_ui_reportresearchgroupdatasetstatus_default") }}">Report Research Group Dataset Status</a></li>
                     <li><a href="{{ path("pelagos_app_ui_gomrireport_default") }}">GOMRI Dataset Report</a></li>
                     <li><a href="{{ path("pelagos_app_ui_datasetdownloadreport_default") }}">Dataset Download Report</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_searchtermsreport_default") }}">Search Terms Report</a></li>
                 </ul>
             </li>
         </ul>
