Removed Todo comment

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
@@ -48,7 +48,6 @@
 %}
 
 {% block body %}
-    {#TODO Create datatable and use API call to get data, in order to populate it.#}
     <h2> Dataset Restrictions - Modifier</h2>
     <table
             entityNiceName = "Dataset Restrictions"
@@ -86,5 +85,8 @@
             <th>Dataset Submission Id</th>
         </tr>
         </thead>
+        <tbody>
+
+        </tbody>
     </table>
 {% endblock %}
