Added CDN urls for jquery editor datatables

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
@@ -11,8 +11,10 @@
     {{
     add_css (
     [
-    '//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css',
-    '//cdn.datatables.net/select/1.0.1/css/select.dataTables.min.css'
+    '//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css',
+    '//cdn.datatables.net/select/1.2.3/css/select.dataTables.min.css',
+    '//cdn.datatables.net/buttons/1.4.2/css/buttons.dataTables.min.css',
+    '//editor.datatables.net/extensions/Editor/css/editor.dataTables.min.css'
     ]
     )
     }}
@@ -21,7 +23,8 @@
     add_js(
     [
     '//cdn.datatables.net/1.10.7/js/jquery.dataTables.js',
-    '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js'
+    '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js',
+    '//editor.datatables.net/extensions/Editor/js/dataTables.editor.min.js'
     ]
     )
     }}
