--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
@@ -22,7 +22,7 @@
     {{
     add_js(
     [
-    '//cdn.datatables.net/1.10.7/js/jquery.dataTables.js',
+    '//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js',
     '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js',
     '//editor.datatables.net/extensions/Editor/js/dataTables.editor.min.js'
     ]
@@ -36,7 +36,7 @@
 
     {% javascripts
         '@PelagosAppBundle/Resources/public/js/common.js'
-        '@PelagosAppBundle/Resources/public/js/entityList.js' %}
+        '@PelagosAppBundle/Resources/public/js/dataset-restrictions.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
@@ -53,10 +53,8 @@
 {% block body %}
     <h2> Dataset Restrictions - Modifier</h2>
     <table
-            entityNiceName = "Dataset Restrictions"
-            viewInterface = "{{ path('pelagos_app_ui_datasetrestrictions_default') }}"
-            entityApi = "{{ path('pelagos_api_datasets_get_collection') }}"
-            class="entityTable stripe"
+            id="datasetRestrictionsTable"
+            class="stripe"
             width="100%"
             data-ajax = '{
                 "url": "{{ path("pelagos_api_datasets_get_collection", {"datasetSubmission": "*", "_properties": properties | join(',')}) }}",
@@ -72,13 +70,6 @@
             data-order = '[
                 [ 1, "desc"]
             ]'
-            data-column-definitions = '[
-            {
-                "targets": [ 0, 3 ],
-                "visible": false,
-                "searchable": false
-            }
-            ]'
     >
         <thead>
         <tr>
@@ -86,6 +77,7 @@
             <th>UDI</th>
             <th>Dataset Restriction</th>
             <th>Dataset Submission Id</th>
+            <th>Change Restriction</th>
         </tr>
         </thead>
         <tbody>
