FIxed the JSON data and added notification animation for the updated message

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
@@ -14,6 +14,7 @@
     '//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css',
     '//cdn.datatables.net/select/1.2.3/css/select.dataTables.min.css',
     '//cdn.datatables.net/buttons/1.4.2/css/buttons.dataTables.min.css',
+    '//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css',
     ]
     )
     }}
@@ -23,6 +24,7 @@
     [
     '//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js',
     '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js',
+    '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js',
     ]
     )
     }}
