--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
@@ -95,7 +95,7 @@
                     <table>
                         <tr>
                             <td valign="top" style="width:100%; padding-right:10px;">
-                                <input id="filter-input" class="textbox" type="text" size="50" value="{{defaultFilter}}" onkeyup="enableFilterButton();">
+                                <input id="filter-input" class="textbox" type="text" size="50" value="{{defaultFilter}}">
                                 <input id="filter-applied" type="hidden" value="{{defaultFilter}}">
                             </td>
                             <td valign="top">
